Aggiunte varie icone e cambiamento username in email

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
     <string name="app_name" translatable="false">UsedBooks</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="sign_in">Sing in</string>
@@ -11,4 +9,7 @@
     <string name="university">University</string>
     <string name="create_account">Create your account</string>
     <string name="confirm_password">Confirm Password</string>
+    <string name="email_address">Email Address</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
