Inizio implementazione grafica fragment_profile.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="chat">Chat</string>
     <string name="profile">Profile</string>
     <string name="testtext">TestText</string>
+    <string name="hi">Hi</string>
 </resources>
