- Rimossa la libreria 'kotlin-android-extensions' e passaggio a findViewById(dd : Int) - Implementato l'adapter per mostrare i Materiale.kt in HomeFragment.kt - Implementato il passaggio tra HomeFragment.kt e MaterialeFragment.kt (non il passaggio di parametri)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="name_of_client">Name of client</string>
     <string name="price">Price</string>
     <string name="name_of_vendor">Name of vendor</string>
+    <string name="add_annunce">Add annunce</string>
 </resources>
