- Inizio implementazione Chat con classi per la memorizzazione dei dati e grafica corrispondente - Sistemazione classe studente per implementazione chat

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <string name="price">Price</string>
     <string name="name_of_vendor">Name of vendor</string>
     <string name="add_annunce">Add annunce</string>
+    <string name="name_of_student">Name of student</string>
+    <string name="last_messagge">Last messagge...</string>
+    <string name="date_last_messagge">Date last messagge</string>
 </resources>
