--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="title">Title</string>
     <string name="description">Description</string>
     <string name="typology">Typology</string>
+    <string name="get_current_position">Get current position</string>
 </resources>
