Implementato ricerca della posizione attuale quando si aggiunge un annuncio

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="description">Description</string>
     <string name="typology">Typology</string>
     <string name="get_current_position">Get current position</string>
+    <string name="testnumber">80</string>
 </resources>
