- Passaggio del materiale provvisorio da MapsFragment.kt a CameraFragment.kt - Implementata chiamata a Database.kt per aggiungere un nuovo annuncio - Aggiunta stringa corso richiesta all'aggiunta di un annuncio in MaterialeDaAggiungere.kt e in fragment_nuovo_annuncio_dati.xml - Sistemata grafica fragment_nuovo_annuncio_dati.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="typology">Typology</string>
     <string name="get_current_position">Get current position</string>
     <string name="testnumber">80</string>
+    <string name="university_course">University course</string>
 </resources>
