- Sistemata grafica fragment_home.xml - Sistemata grafica fragment_profile.xml - Estratta classe MaterialeRecyclerAdapter.kt da HomeFragment.kt - Aggiunto stato vendita del materiale in list_item_material_complete.xml - Creata lista degli annunci pubblicati sul ProfileFragment.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,6 @@
     <string name="get_current_position">Get current position</string>
     <string name="testnumber">80</string>
     <string name="university_course">University course</string>
+    <string name="you_have_no_published_ad">You have no published ad</string>
+    <string name="state_of_material">State of material</string>
 </resources>
