- Inizio creazione ChangeFotoProfiloFragment.kt per cambiare la foto profilo dell'utente - Implementato caricamento RecyclerView per la selezione dell'utente a cui si è venduto il materiale - Creato adapter appostito UserSaleAdapter.kt per la gestione corretta della RecylerView presente nel SoldFragment.kt - Corretto bug per cui crashava il ProfileFragment.kt nel caso in cui si cambiava la schermata prima che il thread avesse terminato di caricare la lista

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,6 @@
     <string name="materials_for_sale">Materials for sale</string>
     <string name="materials_sold">Materials sold</string>
     <string name="transaction">Transaction</string>
+    <string name="confirm">Confirm</string>
+    <string name="choose_the_student_that_acquire_the_material">Choose the student that acquire the material</string>
 </resources>
