--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="transaction">Transaction</string>
     <string name="confirm">Confirm</string>
     <string name="choose_the_student_that_acquire_the_material">Choose the student that acquire the material</string>
+    <string name="there_are_no_materials">There are no materials</string>
 </resources>
