--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,5 @@
     <string name="there_are_no_materials">There are no materials</string>
     <string name="announcement">Announcement</string>
     <string name="no_chats">There are no chats</string>
+    <string name="usedbooks">UsedBooks</string>
 </resources>
