--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name" translatable="false">UsedBooks</string>
-    <string name="password">Password</string>
+    <string name="password" translatable="false">Password</string>
     <string name="login">Login</string>
     <string name="sign_in">Sing in</string>
     <string name="register">Register</string>
@@ -13,12 +13,12 @@
 
     <string name="send">Send Message</string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="home">Home</string>
     <string name="search">Search</string>
     <string name="chat">Chat</string>
     <string name="profile">Profile</string>
-    <string name="testtext">TestText</string>
+    <string name="testtext" translatable="false">TestText</string>
     <string name="hi">Hi</string>
     <string name="contact_me">Contact Me</string>
     <string name="name_of_material">Name of material</string>
@@ -28,11 +28,9 @@
     <string name="add_announce">Add announce</string>
     <string name="name_of_student">Name of student</string>
     <string name="last_messagge">Last message</string>
-    <string name="date_last_messagge">Date last message</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">"Welcome!"</string>
     <string name="invalid_username">Not a valid username</string>
@@ -52,7 +50,7 @@
     <string name="description">Description</string>
     <string name="typology">Typology</string>
     <string name="get_current_position">Get current position</string>
-    <string name="testnumber">80</string>
+    <string name="testnumber" translatable="false">80</string>
     <string name="university_course">University course</string>
     <string name="you_have_no_published_ad">You have no published ad</string>
     <string name="state_of_material">State of material</string>
@@ -65,5 +63,5 @@
     <string name="there_are_no_materials">There are no materials</string>
     <string name="announcement">Announcement</string>
     <string name="no_chats">There are no chats</string>
-    <string name="usedbooks">UsedBooks</string>
+    <string name="action_sign_in">Sing in or register</string>
 </resources>
