--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,9 +10,7 @@
     <string name="create_account">Create your account</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="email_address">Email Address</string>
-
     <string name="send">Send Message</string>
-
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="home">Home</string>
     <string name="search">Search</string>
@@ -28,7 +26,6 @@
     <string name="add_announce">Add announce</string>
     <string name="name_of_student">Name of student</string>
     <string name="last_messagge">Last message</string>
-    <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in_short">Sign in</string>
@@ -70,4 +67,9 @@
     <string name="new_image_profile">New Image Profile</string>
     <string name="logo_image">Logo Image</string>
     <string name="image_of_announcement">Image of Announcement</string>
+    <string name="no_data">Error in submitted data</string>
+    <string name="empty">Empty</string>
+    <string name="message_empty">Error: there are some text empty</string>
+    <string name="error">Error</string>
+    <string name="image_of_chosen_photo">Image of chosen photo</string>
 </resources>
